# artdaq-mfextensions

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/: copilot-instructions.md
.github/workflows/: artdaq-build-single-pkg.yml  artdaq-develop-cpp-ci.yml  artdaq-format-single-pkg.yml  artdaq-test-single-pkg.yml  artdaq-tidy-single-pkg.yml  auto_approve.yml  git-whitespace.yml
ErrorHandler/: CMakeLists.txt
ErrorHandler/Components/: CMakeLists.txt
ErrorHandler/MessageAnalyzer/: ma_action_mail.cpp  ma_action_script.cpp  ma_utils.cpp
ErrorHandler/config/: RCNamedConfigs.xml  RCNamedConfigs.xsd  RunControlConfiguration.xsd  msganalyzer.fcl  msganalyzer_FarDet.fcl  rcMsg.cfg  rules_test.fcl  send_mail.sh
ErrorHandler/doc/: RuleEngineDocumentation.txt
ErrorHandler/test/: mftest.cc  pop_dcm.sh  pop_main_comp.sh  pop_main_error.sh  pop_main_warning.sh
Modules/: FindRdKafka.cmake  LICENSE.FindRdKafka
doc/: CMakeLists.txt  Doxyfile.in  footer.html.in  header.html.in  mainpage.md.in
fcl/: msganalyzer.fcl  msgviewer.fcl
mfextensions/Binaries/: CMakeLists.txt  MFTest.cc
mfextensions/Destinations/: ANSI_mfPlugin.cc  CMakeLists.txt  Kafka_mfPlugin.cc  SMTP_mfPlugin.cc
mfextensions/Destinations/fcl/: multifile.fcl  trace.fcl
mfextensions/Receivers/: CMakeLists.txt  qt_mf_msg.cc
test/Extensions/: CMakeLists.txt
tools/: CMakeLists.txt  mf_simple.cc  startMsgViewer.sh  udp_send_mfmsg.py
ups/: product_deps
